make password reset form responsive

--- a/apps/authentication/templates/passwordreset/password_reset_form.html
+++ b/apps/authentication/templates/passwordreset/password_reset_form.html
@@ -7,33 +7,32 @@
 
 {% block content %}
 
-    
-<div class="card mt-4  " style="margin:0px 150px 0px 150px">
-  <div class="card-header text-center p-3" style="background-color:#004de6;color:white;">
-    <span style="font-size: 20px;">Reset Password</span>
+ <br>
 
-  </div>
-  <div class="card-body">
+    <!-- Page content -->
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-8">
+          <div class="card bg-secondary shadow border-0">
+            <div class="card-header bg-transparent">
+              <div class="text-muted text-center">
+               <strong>Create New Password</strong>
+              </div>
+            </div>
+            <div class="card-body">
+            
 
-    <form method="post">
-      {% csrf_token %}
-      {{ form|crispy }}
-      <a href="{% url 'authentication:login' %}" class="btn btn-danger"><strong>Back To Login</strong></a>
-      <input type="Submit" class="btn  btn-success" name="Submit">
-    </form>
-
-  </div>
-
-  <!-- /.login-card-body -->
-</div>
-    <!-- /.login-box -->
-    <!-- <footer class="w-100 mt-4 text-center">
-      <strong>Copyright &copy; 2021 <a href="https://mangosoftsolution.com/">Mangosoft Solution</a>.</strong> All rights
-      reserved.
-      <div class="d-none d-sm-inline-block">
-        <b>Version</b> 2.0
+              <form method="post">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <a href="{% url 'authentication:login' %}" class="btn btn-sm btn-danger"><strong>Back To Login</strong></a>
+                <input type="Submit" class="btn btn-sm  btn-success" name="Submit">
+              </form>
+            
+            </div>
+          </div>
+        
+        </div>
       </div>
-    </footer> -->
-  <!-- /.login-box -->
-
+    </div>
 {% endblock content %}
