--- a/apps/blog/templates/blog/article/home.html
+++ b/apps/blog/templates/blog/article/home.html
@@ -96,12 +96,9 @@ Home
                       <div class="meta mb-1"><span class="date"><b>Published:</b> <i>{{ article.date_published|date:'M d, Y'}}</i></span>
                         <span class="time">{{ article.count_words }} word{{ article.count_words|pluralize }}</span>
                         <span class="time">{{ article.read_time }} min{{ article.read_time|pluralize }} read</span>
-                        <span class="comment">{{ article.views }} view{{ article.views|pluralize }}</span>
+                        <span class="view">{{ article.views }} view{{ article.views|pluralize }}</span>
                         <!-- <span class="comment"><a href="#">{{ article.comments.count }} comment{{article.comments.count|pluralize }}</a></span> -->
-                        <span class="time">
-
-
-                        </span>
+                        
                       </div>
                       <ul class="tags my-2">
                         {% for tag in article.tags.all %}
