--- a/templates/account_base.html
+++ b/templates/account_base.html
@@ -13,7 +13,7 @@
    {{title}}
   </title>
 
-  <link rel="icon" href="/static/assets/img/brand/favicon.png" type="image/png">
+  <link rel="icon" href="{% static 'assets/img/logo.png' %}" type="image/png">
   <!-- Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
 
