--- a/apps/authentication/templates/account/password_reset.html
+++ b/apps/authentication/templates/account/password_reset.html
@@ -1,11 +1,14 @@
+<!-- Enter your register email here to get verification -->
+
+
 {% extends 'account_base.html' %}
+
 {% load crispy_forms_tags %}
+<!-- Specific CSS goes HERE -->
 {% block stylesheets %}{% endblock stylesheets %}
 
 {% block content %}
-
- <br>
-
+<br>
     <!-- Page content -->
     <div class="container">
       <div class="row justify-content-center">
@@ -13,11 +16,14 @@
           <div class="card bg-secondary shadow border-0">
             <div class="card-header bg-transparent">
               <div class="text-muted text-center">
-               <strong>Create New Password</strong>
+               <strong>Reset Password</strong>
               </div>
             </div>
             <div class="card-body">
-            
+              <div class="text-center text-muted mb-4">
+
+                <h5>Enter your register email, and we'll email instruction for settings a new one</h5>
+              </div>
 
               <form method="post">
                 {% csrf_token %}
@@ -32,4 +38,9 @@
         </div>
       </div>
     </div>
+
+    <!-- /.login-logo -->
+
+   
+
 {% endblock content %}
