--- a/apps/authentication/templates/passwordreset/password_reset_email.html
+++ b/apps/authentication/templates/passwordreset/password_reset_email.html
@@ -25,7 +25,7 @@
               <form method="post">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <a href="{% url 'authentication:login' %}" class="btn btn-sm btn-danger"><strong>Back To Login</strong></a>
+                <a href="{% url 'login' %}" class="btn btn-sm btn-danger"><strong>Back To Login</strong></a>
                 <input type="Submit" class="btn btn-sm  btn-success" name="Submit">
               </form>
             
@@ -53,7 +53,7 @@
     <form method="post">
       {% csrf_token %}
       {{ form|crispy }}
-      <a href="{% url 'authentication:login' %}" class="btn btn-danger"><strong>Back To Login</strong></a>
+      <a href="{% url 'login' %}" class="btn btn-danger"><strong>Back To Login</strong></a>
       <input type="Submit" class="btn  btn-success" name="Submit">
     </form>
 
