--- a/templates/account_base.html
+++ b/templates/account_base.html
@@ -76,7 +76,7 @@
               
            
                 
-              <a href="{% url 'authentication:logout' %}" class="nav-link">
+              <a href="{% url 'logout' %}" class="nav-link">
                 <span class="nav-link-inner--text">Logout</span>
               </a>
             </li>
@@ -85,12 +85,12 @@
               
            
                 
-              <a href="{% url 'authentication:login' %}" class="nav-link">
+              <a href="{% url 'login' %}" class="nav-link">
                 <span class="nav-link-inner--text">Login</span>
               </a>
             </li>
             <li class="nav-item">
-              <a href="{% url 'authentication:register' %}" class="nav-link">
+              <a href="{% url 'register' %}" class="nav-link">
                 <span class="nav-link-inner--text">Register</span>
               </a>
             </li>
