--- a/apps/authentication/templates/account/login.html
+++ b/apps/authentication/templates/account/login.html
@@ -1,4 +1,5 @@
 {% extends 'account_base.html' %}
+{% load crispy_forms_tags %}
 {% load socialaccount %}
 {% block title %} Login {% endblock title %}
 
@@ -43,25 +44,7 @@
 
                 {% csrf_token %}
 
-                <div class="form-group mb-3">
-                  <label for="username">Email*</label>
-
-                  <div class="input-group input-group-alternative">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
-                    </div>
-                    {{ form.email }}
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="password">Password*</label>
-                  <div class="input-group input-group-alternative">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
-                    </div>
-                    {{ form.password }}
-                  </div>
-                </div>
+                {{form|crispy}}
                 <div class="custom-control custom-control-alternative custom-checkbox">
                   <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
                   <label class="custom-control-label" for=" customCheckLogin">
@@ -74,7 +57,7 @@
               </form>
               <div class="row mt-3">
                 <div class="col-6">
-                  <a href="{% url 'register' %}"><small>Register</small></a>
+                  <a href="{% url 'authentication:register' %}"><small>Register</small></a>
                 </div>
                 <div class="col-6 text-right">
                   <a href="{% url 'password_reset' %}"><small>Forget Password</small></a>
