--- a/apps/authentication/templates/account/password_reset_from_key.html
+++ b/apps/authentication/templates/account/password_reset_from_key.html
@@ -1,3 +1,5 @@
+
+<!-- This page contains password reset form -->
 {% extends 'account_base.html' %}
 {% load crispy_forms_tags %}
 {% block stylesheets %}{% endblock stylesheets %}
