--- a/apps/authentication/templates/passwordreset/password_reset_complete.html
+++ b/apps/authentication/templates/passwordreset/password_reset_complete.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 
-  <!-- <a href="{% url 'authentication:login' %}" class="btn btn-sm btn-info ml-3 mt-4 float-left"> Login</a> -->
+  <!-- <a href="{% url 'login' %}" class="btn btn-sm btn-info ml-3 mt-4 float-left"> Login</a> -->
   <br>
 <div class="row">
   <div class="col-md-10 mx-2">
@@ -17,7 +17,7 @@
     <div class="card-body">
       <h5 class="card-title">Your password has been reset. You may go ahead and log in now.</h5>
       <hr>
-      <a href="{% url 'authentication:login'%}" class="btn btn-primary">Log in with new password</a>
+      <a href="{% url 'login'%}" class="btn btn-primary">Log in with new password</a>
     </div>
     </div>
   </div>
