--- a/templates/includes/blog_navbar.html
+++ b/templates/includes/blog_navbar.html
@@ -191,10 +191,10 @@
           </div>
 
           {% if request.user.is_authenticated %}
-          <a  class="nav-item nav-link" href="{% url 'authentication:logout' %}">Logout</a>
+          <a  class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
       {% else %}
-          <a  class="nav-item nav-link" href="{% url 'authentication:login' %}">Login</a>
-          <a  class="nav-item nav-link" href="{% url 'authentication:register' %}">Register</a>
+          <a  class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+          <a  class="nav-item nav-link" href="{% url 'register' %}">Register</a>
       {% endif %}
          
           <!-- <a href="#" class="nav-item nav-link"><i class="fa fa-google-plus"></i></a>
