--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -216,7 +216,7 @@
               <span>Support</span>
             </a>
             <div class="dropdown-divider"></div>
-            <a href="{% url 'authentication:logout' %}" class="dropdown-item">
+            <a href="{% url 'logout' %}" class="dropdown-item">
               <i class="ni ni-user-run text-red"></i>
               <span>Logout</span>
             </a>
