fix allauth error

--- a/apps/authentication/templates/authentication/login.html
+++ b/apps/authentication/templates/authentication/login.html
@@ -19,7 +19,7 @@
             </div>
             <div class="card-header bg-transparent">
               <div class="text-center">
-                <a href="{% provider_login_url 'github' %}" class="btn btn-neutral btn-icon mr-4">
+                <a href="" class="btn btn-neutral btn-icon mr-4">
                   <span class="btn-inner--icon"><img src="/static/assets/img/icons/common/github.svg"></span>
                   <span class="btn-inner--text">Github</span>
                 </a>
