--- a/apps/authentication/templates/authentication/register.html
+++ b/apps/authentication/templates/authentication/register.html
@@ -18,7 +18,7 @@
           <div class="card-header bg-transparent">
             <div class="text-muted text-center mt-2 mb-4"><small>Sign up with</small></div>
             <div class="text-center">
-              <a href="{% provider_login_url 'github' %}" class="btn btn-neutral btn-icon mr-4">
+              <a href="" class="btn btn-neutral btn-icon mr-4">
                 <span class="btn-inner--icon"><img src="/static/assets/img/icons/common/github.svg"></span>
                 <span class="btn-inner--text">Github</span>
               </a>
