Update verification from allauth

--- a/apps/authentication/templates/account/login.html
+++ b/apps/authentication/templates/account/login.html
@@ -57,7 +57,7 @@
               </form>
               <div class="row mt-3">
                 <div class="col-6">
-                  <a href="{% url 'authentication:register' %}"><small>Register</small></a>
+                  <a href="{% url 'register' %}"><small>Register</small></a>
                 </div>
                 <div class="col-6 text-right">
                   <a href="{% url 'password_reset' %}"><small>Forget Password</small></a>
