--- a/apps/authentication/templates/account/signup.html
+++ b/apps/authentication/templates/account/signup.html
@@ -22,7 +22,7 @@
                 <span class="btn-inner--icon"><img src="/static/assets/img/icons/common/github.svg"></span>
                 <span class="btn-inner--text">Github</span>
               </a>
-              <a href="#" class="btn btn-neutral btn-icon">
+              <a href="{% provider_login_url 'google' %}" class="btn btn-neutral btn-icon">
                 <span class="btn-inner--icon"><img src="/static/assets/img/icons/common/google.svg"></span>
                 <span class="btn-inner--text">Google</span>
               </a>
@@ -37,7 +37,7 @@
             {% csrf_token %}
             {{form|crispy}}
 
-              <div class="text-muted font-italic"><small>password strength: <span class="text-success font-weight-700">strong</span></small></div>
+              <!-- <div class="text-muted font-italic"><small>password strength: <span class="text-success font-weight-700">strong</span></small></div> -->
               <div class="row my-4">
                 <div class="col-12">
                   <div class="custom-control custom-control-alternative custom-checkbox">
