--- a/apps/authentication/templates/authentication/login.html
+++ b/apps/authentication/templates/authentication/login.html
@@ -19,11 +19,11 @@
             </div>
             <div class="card-header bg-transparent">
               <div class="text-center">
-                <a href="{% provider_login_url 'github' %}" class="btn btn-neutral btn-icon mr-4">
+                <a  class="btn btn-neutral btn-icon mr-4" data-toggle="modal" data-target="#exampleModalCenter">
                   <span class="btn-inner--icon"><img src="/static/assets/img/icons/common/github.svg"></span>
                   <span class="btn-inner--text">Github</span>
                 </a>
-                <a href="#" class="btn btn-neutral btn-icon">
+                <a href="{% provider_login_url 'google' %}" class="btn btn-neutral btn-icon" >
                   <span class="btn-inner--icon"><img src="/static/assets/img/icons/common/google.svg"></span>
                   <span class="btn-inner--text">Google</span>
                 </a>
@@ -69,7 +69,7 @@
                   </label>
                 </div>
                 <div class="">
-                  <button type="submit" class="btn btn-block btn-primary my-3"> Login</button>
+                  <button type="submit" name = "login_submit" class="btn btn-block btn-primary my-3"> Login</button>
                 </div>
               </form>
               <div class="row mt-3">
@@ -87,7 +87,26 @@
       </div>
     </div>
 
-
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+      {% include "socialaccount/login.html" %}
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock content %}
 
 <!-- Specific JS goes HERE --> 
