Create new secret key

--- a/apps/authentication/templates/account/login.html
+++ b/apps/authentication/templates/account/login.html
@@ -29,7 +29,7 @@
               <div class="text-center">
 
 
-                <a  class="btn btn-neutral btn-icon mr-4" data-toggle="modal" data-target="#exampleModalCenter">
+                <a  href="{% provider_login_url 'github' %}" class="btn btn-neutral btn-icon mr-4" >
                   <span class="btn-inner--icon"><img src="/static/assets/img/icons/common/github.svg"></span>
                   <span class="btn-inner--text">Github</span>
                 </a>
@@ -76,26 +76,7 @@
 
 
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-      {% include "socialaccount/login.html" %}
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
+
 {% endblock content %}
 
 <!-- Specific JS goes HERE --> 
