--- a/apps/authentication/templates/account/password_reset.html
+++ b/apps/authentication/templates/account/password_reset.html
@@ -5,6 +5,11 @@
 
 {% load crispy_forms_tags %}
 <!-- Specific CSS goes HERE -->
+
+{% block title %}
+Reset Password
+{% endblock title %}
+  
 {% block stylesheets %}{% endblock stylesheets %}
 
 {% block content %}
