--- a/templates/includes/blog_navbar.html
+++ b/templates/includes/blog_navbar.html
@@ -164,7 +164,7 @@
         <div class="navbar-nav ml-4 mt-1">
           <a href="#" class="nav-item nav-link active position-relative "><i class = "fas fa-sm fa-home"></i> Home</a>
           <a href="#" class="nav-item nav-link">Articles</a>
-          <a href="#" class="nav-item nav-link">Projects</a>
+          <a href="{% url 'myprojects:projects' %}" class="nav-item nav-link">Projects</a>
           <a href="#" class="nav-item nav-link">About</a>
 
 
