--- a/apps/projects/templates/projects/project_list.html
+++ b/apps/projects/templates/projects/project_list.html
@@ -19,15 +19,14 @@
                   <div class="card shadow-lg border-0 rounded-lg mt-5">
         
         
-                    <div class="card-header bg-secondary" >
+                    <!-- <div class="card-header bg-secondary" >
                       <h2 class="text-center font-weight-light my-2" >  Thanks for reaching out!</h2>
-                    </div>
+                    </div> -->
         
                     <div class="card-body">
                         <div id="success-box" class="content-block">
                           
-                            <p>Your message was successfully sent. I will do my best to get back to you in a timely manner :)</p>
-                            <a id="back-btn" class="btn btn-success" href="/">BACK TO HOME PAGE</a>
+                            <p>Comming Soon!</p>
                         </div>
         
                     </div>
