--- a/apps/projects/templates/projects/project_list.html
+++ b/apps/projects/templates/projects/project_list.html
@@ -14,7 +14,7 @@
     <div class="container">
 
             <div class="container">
-              <div class="row justify-content-center">
+              <div class="row justify-content-center mt-4">
                 <div class="col-lg-8">
                   <div class="card shadow-lg border-0 rounded-lg mt-5">
         
@@ -25,8 +25,7 @@
         
                     <div class="card-body">
                         <div id="success-box" class="content-block">
-                          
-                            <p>Comming Soon!</p>
+                          <h2>Coming Soon!</h2>
                         </div>
         
                     </div>
