Updated projects section template Modified navbar

--- a/apps/authentication/templates/account/email_confirm.html
+++ b/apps/authentication/templates/account/email_confirm.html
@@ -3,6 +3,10 @@
 {% load i18n %}
 {% load account %}
 
+{% block title %}
+  Confirm E-mail Address
+{% endblock title %}
+  
 {% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
 
 
