--- a/apps/authentication/templates/authentication/login.html
+++ b/apps/authentication/templates/authentication/login.html
@@ -69,7 +69,7 @@
                   </label>
                 </div>
                 <div class="">
-                  <button type="submit" name = "login_submit" class="btn btn-block btn-primary my-3"> Login</button>
+                  <button type="submit" class="btn btn-block btn-primary my-3"> Login</button>
                 </div>
               </form>
               <div class="row mt-3">
