--- a/apps/blog/templates/blog/article/home.html
+++ b/apps/blog/templates/blog/article/home.html
@@ -172,7 +172,7 @@ Home
         </div>
       </div>
     </div>
-    <div class="col-md-4 ">
+    <div class="col-md-4  mt-4">
 
       <div class="single-post info-area bg-white">
 
