--- a/templates/blog_base.html
+++ b/templates/blog_base.html
@@ -42,7 +42,7 @@
 
 </head>
 
-<body style="background-color: #F7FAF6;">
+<body style="background-color: #f5f5f5;">
 
   <div class="page-loader home-loader">
     <div class="inner-loader">
