--- a/apps/blog/templates/blog/category/category_articles.html
+++ b/apps/blog/templates/blog/category/category_articles.html
@@ -18,7 +18,7 @@ Categories
 		<h1 class="title display-table-cell cell-color"><b>{{ category.name }}</b></h1>
 	</div> -->
 
-<section class="blog-area section">
+<section class="blog-area section" style="background-color: #f5f5f5;">
     <div class="container">
 
         <div class="row">
@@ -65,9 +65,10 @@ Categories
                 {% else %}
                 <br><br>
                 <center>
-                    <div class="alert alert-warning"><b>No articles are found in  <strong>{{category.name}}</strong> category.</b></div>
+                    <div class="alert alert-warning"><b>No articles are found in  <strong>{{category.name}}</strong> category.  <strong>Coming Soon.</strong></b></div>
                 </center>
                 {% endif %}
+                <br>
                 <hr>
                     {# Pagination for article post #}
             <nav aria-label="Page navigation example">
