--- a/templates/includes/blog_footer.html
+++ b/templates/includes/blog_footer.html
@@ -1,5 +1,5 @@
 
-<section class="newsletter">
+<section class="newsletter"  style="background-color: #f5f5f5;" >
     <div class="container" style="background-color: white;padding-bottom:30px;">
         <div class="row">
             <div class="col-sm-12">
