--- a/templates/includes/blog_navbar.html
+++ b/templates/includes/blog_navbar.html
@@ -156,7 +156,7 @@
         </a>
 
       </div>
-      <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span style="color:white;">
         <i class="fas fa-2x fa-bars"></i>
 
@@ -165,14 +165,20 @@
       <!-- Collection of nav links, forms, and other content for toggling -->
       <div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
         <div class="navbar-nav ml-4 mt-1">
-          <a href="{% url 'blog:home' %}" class="nav-item nav-link active position-relative "><i class = "fas fa-sm fa-home"></i> Home</a>
-          <a href="#" class="nav-item nav-link">Articles</a>
-          <a href="{% url 'myprojects:projects' %}" class="nav-item nav-link">Projects</a>
-          <a href="#" class="nav-item nav-link">About</a>
+          <a href="{% url 'blog:home' %}" {% if request.path == '/' %}class=" nav-item nav-link active"{% endif %} class="nav-item nav-link  position-relative "><i class = "fas fa-sm fa-home"></i> Home</a>
 
+          <li>
+            <a href="#" class="nav-item nav-link">Articles</a>
+
+          </li>
+          <li>
+          <a href="{% url 'myprojects:projects' %}" {% if request.path == '/projects/list/' %}class=" nav-item nav-link active"{% endif %} class="nav-item nav-link">Projects</a>
+
+          </li>
+          <a href="{% url 'authentication:email_sent' %}" {% if request.path == '/send_message/' %}class=" nav-item nav-link active"{% endif %} class="nav-item nav-link">Contact</a>
 
           <!-- <div class="nav-item dropdown">
-            <a href="#" data-toggle="dropdown" class="nav-item nav-link dropdown-toggle">Projects</a>
+            <a href="#" data-toggle="dropdown" class="nav-item nav-link dropdown-toggle">Services</a>
             <div id="sub-menu" class="dropdown-menu">
               <a href="#" class="dropdown-item">Web Design</a>
               <a href="#" class="dropdown-item">Web Development</a>
@@ -180,7 +186,6 @@
               <a href="#" class="dropdown-item">Digital Marketing</a>
             </div>
           </div> -->
-          <a href="{% url 'authentication:email_sent' %}" class="nav-item nav-link">Contact</a>
         </div>
         <div class="navbar-nav ml-auto">
           <div class="nav-item dropdown search-dropdown">
