--- a/apps/authentication/templates/account/_contact_form.html
+++ b/apps/authentication/templates/account/_contact_form.html
@@ -2,6 +2,11 @@
 <!-- This page contains password reset form -->
 {% extends 'blog_base.html' %}
 {% load crispy_forms_tags %}
+
+{% block title %}
+  Contact 
+{% endblock title %}
+  
 {% block stylesheets %}{% endblock stylesheets %}
 
 {% block content %}
