--- a/apps/projects/templates/projects/project_list.html
+++ b/apps/projects/templates/projects/project_list.html
@@ -4,7 +4,7 @@
 <!-- This page contains password reset form -->
 {% extends 'blog_base.html' %}
 {% block title %}
-  Message Sent Success
+Projects
 {% endblock title %}
 {% block content %}
 
