Updated compresor settings

--- a/apps/blog/templates/blog/article/home.html
+++ b/apps/blog/templates/blog/article/home.html
@@ -241,7 +241,7 @@ Home
 
 </script>
 
-<!-- <script src="{% static 'blog/js/scripts.js' %}"></script> -->
+<!-- <script src="{% static 'blog/js/scripts.js' %}"></script> -->\
 
 {% endcompress %}
 
